--- a/css/styles.css
+++ b/css/styles.css
@@ -735,7 +735,9 @@ body {
   transform: translate(-50%, -50%) scale(1);
 
   width: 408px;
-  height: 576px;
+  height: 584px;
+
+  padding: 24px;
 
   transition: var(--time-transition-duration), var(--transition-timing-function);
   min-width: 408px;
@@ -746,7 +748,7 @@ body {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
-
+/* Button close in the Modal */
 .close-btn-modal {
   display: flex;
   justify-content: center;
@@ -791,4 +793,264 @@ body {
 .close-btn-modal:hover .icon-btn-modal,
 .close-btn-modal:active .icon-btn-modal {
   fill: var(--light);
+}
+
+/* Content modal window */
+
+.text-modal {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-top: 48px;
+  margin-bottom: 16px;
+
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--dark);
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  min-height: 336px;
+  margin: 0 auto;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+  color: var(--text);
+
+  transition-duration: fill var(--time-transition-duration);
+  transition-timing-function: fill var(--transition-timing-function);
+}
+.modal-form-input:focus {
+  border-color: var(--primary-brand);
+  outline: none;
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--primary-brand);
+}
+
+.modal-form-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtle-text);
+}
+.modal-form-textarea {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  margin-bottom: 8px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding: 8px 16px;
+  color: var(--text);
+}
+
+.modal-form-textarea:focus {
+  border-color: var(--primary-brand);
+  outline: none;
+  transition-duration: border-color var(--time-transition-duration);
+  transition-timing-function: border-color var(--transition-timing-function);
+}
+
+.modal-form-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtle-text);
+}
+.modal-form-btn-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+}
+
+.modal-form-field {
+  margin-bottom: 8px;
+}
+
+.modal-form-input-desc {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtle-text);
+  margin-bottom: 4px;
+}
+
+/* Icon in the inputs */
+
+.modal-form-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translate(0, -50%);
+  width: 18px;
+  height: 24px;
+  display: block;
+  fill: var(--dark);
+  transition-duration: fill var(--time-transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+/* Inputs  */
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+/* Check-box */
+.modal-form-check-desc::before {
+  content: "";
+  display: block;
+  cursor: pointer;
+
+  margin-right: 8px;
+
+  width: 16px;
+  height: 16px;
+
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+}
+
+.modal-form-check:checked + .modal-form-check-desc::before {
+  background-image: url(../images/svg/click.svg);
+  fill: var(--light);
+  background-color: var(--pressed-state);
+  background-size: 10px 8px;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  transition-duration: var(--time-transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+.modal-form-check:focus + .modal-form-check-desc::before {
+  border-color: var(--primary-brand);
+
+  transition-duration: var(--time-transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+.modal-form-check-desc {
+  display: flex;
+  align-items: center;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+  color: var(--subtle-text);
+}
+
+/* subscribe form */
+.subscribe-footer {
+  margin-left: 80px;
+}
+.subscribe-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white-background);
+  margin-bottom: 16px;
+}
+
+.subscribe-form {
+  /* display: flex;
+  flex-direction: column;
+  width: 360px;
+  min-height: 336px; */
+  margin: 0 auto;
+  margin-right: 16px;
+}
+
+.subscribe-form-input {
+  width: 264px;
+  height: 40px;
+  padding: 16px;
+  margin-right: 24px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white-background);
+
+  border: 1px solid var(--white-background);
+  border-radius: 4px;
+  background-color: var(--dark);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+
+  transition-duration: fill var(--time-transition-duration);
+  transition-timing-function: fill var(--transition-timing-function);
+}
+.subscribe-form-input:focus {
+  border-color: var(--primary-brand);
+  outline: none;
+}
+
+.subscribe-form-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: var(--white-background);
+}
+
+.subscribe-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.subscribe-btn {
+  display: inline-flex;
+  min-width: 165px;
+  text-align: center;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin: auto;
+
+  color: var(--white-background);
+  background-color: var(--primary-brand);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+
+  transition-property: color, border, box-shadow, background;
+  transition-duration: var(--time-transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  color: var(--white-background);
+  background-color: var(--pressed-state);
+}
+
+.footer-subscribe-btn-icon {
+  margin-left: 16px;
+  fill: var(--white-background);
 }
