--- a/css/styles.css
+++ b/css/styles.css
@@ -737,11 +737,11 @@ body {
   width: 408px;
   height: 584px;
 
-  padding: 24px;
+  padding: 72px 24px 24px;
 
   transition: var(--time-transition-duration), var(--transition-timing-function);
-  min-width: 408px;
-  min-height: 576px;
+  /* min-width: 408px;
+  min-height: 576px; */
 
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -761,7 +761,7 @@ body {
   background: var(--accent);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  transition-duration: var(--time-transition-duration);
+  transition: var(--time-transition-duration);
   transition-timing-function: var(--transition-timing-function);
 }
 
@@ -769,7 +769,7 @@ body {
   width: 8px;
   height: 8px;
   fill: var(--dark);
-  transition-duration: fill var(--time-transition-duration);
+  transition: fill var(--time-transition-duration);
   transition-timing-function: var(--transition-timing-function);
 }
 
@@ -786,7 +786,7 @@ body {
   height: 24px;
   background: var(--pressed-state);
   border-radius: 50%;
-  transition-duration: var(--time-transition-duration);
+  transition: var(--time-transition-duration);
   transition-timing-function: var(--transition-timing-function);
 }
 
@@ -801,7 +801,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  margin-top: 48px;
   margin-bottom: 16px;
 
   text-align: center;
@@ -812,9 +811,9 @@ body {
 .modal-form {
   display: flex;
   flex-direction: column;
-  width: 360px;
+  /* width: 360px;
   min-height: 336px;
-  margin: 0 auto;
+  margin: 0 auto; */
 }
 
 .modal-form-input {
@@ -825,8 +824,8 @@ body {
   padding-left: 38px;
   color: var(--text);
 
-  transition-duration: fill var(--time-transition-duration);
-  transition-timing-function: fill var(--transition-timing-function);
+  transition: border var(--time-transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .modal-form-input:focus {
   border-color: var(--primary-brand);
@@ -848,7 +847,7 @@ body {
   resize: none;
   width: 100%;
   height: 120px;
-  margin-bottom: 8px;
+
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding: 8px 16px;
@@ -858,7 +857,7 @@ body {
 .modal-form-textarea:focus {
   border-color: var(--primary-brand);
   outline: none;
-  transition-duration: border-color var(--time-transition-duration);
+  transition: border-color var(--time-transition-duration);
   transition-timing-function: border-color var(--transition-timing-function);
 }
 
@@ -869,14 +868,9 @@ body {
   letter-spacing: 0.04em;
   color: var(--subtle-text);
 }
-.modal-form-btn-wrapper {
-  display: flex;
-  justify-content: center;
-  margin-top: 24px;
-}
 
 .modal-form-field {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .modal-form-input-desc {
@@ -900,7 +894,7 @@ body {
   height: 24px;
   display: block;
   fill: var(--dark);
-  transition-duration: fill var(--time-transition-duration);
+  transition: fill var(--time-transition-duration);
   transition-timing-function: var(--transition-timing-function);
 }
 
@@ -934,14 +928,14 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 
-  transition-duration: var(--time-transition-duration);
+  transition: var(--time-transition-duration);
   transition-timing-function: var(--transition-timing-function);
 }
 
 .modal-form-check:focus + .modal-form-check-desc::before {
   border-color: var(--primary-brand);
 
-  transition-duration: var(--time-transition-duration);
+  transition: var(--time-transition-duration);
   transition-timing-function: var(--transition-timing-function);
 }
 
@@ -953,8 +947,12 @@ body {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  margin-bottom: 24px;
 
   color: var(--subtle-text);
+}
+.user-policy-link {
+  color: var(--primary-brand);
 }
 
 /* subscribe form */
@@ -971,12 +969,8 @@ body {
 }
 
 .subscribe-form {
-  /* display: flex;
-  flex-direction: column;
-  width: 360px;
-  min-height: 336px; */
   margin: 0 auto;
-  margin-right: 16px;
+  margin-left: 80px;
 }
 
 .subscribe-form-input {
@@ -996,8 +990,8 @@ body {
   background-color: var(--dark);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 
-  transition-duration: fill var(--time-transition-duration);
-  transition-timing-function: fill var(--transition-timing-function);
+  transition: border var(--time-transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .subscribe-form-input:focus {
   border-color: var(--primary-brand);
@@ -1053,4 +1047,8 @@ body {
 .footer-subscribe-btn-icon {
   margin-left: 16px;
   fill: var(--white-background);
+}
+
+.subscribe-content {
+  display: flex;
 }
